<resources>
    <string name="app_name">MyRecipes</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="select_photo">Выбрать фото</string>
    <string name="ingredients">Ingredients</string>
    <string-array name="select_photo">
        <item>Камера</item>
        <item>Галерея</item>
    </string-array>
    <string-array name="categories">
        <item>Soup</item>
        <item>Desert</item>
        <item>Salad</item>
        <item>Breakfast</item>
        <item>Bakery</item>
    </string-array>
    <string name="delete_confirmation">Are you sure you want to delete this recipe permanently?</string>
    <string-array name="sort">
        <item>A-Z</item>
        <item>Z-A</item>
        <item>By time asc</item>
        <item>By time desc</item>
    </string-array>
    <string name="delete_ingredient_confirmation">Are you sure you want to delete this ingredient permanently?</string>
</resources>