<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/add"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sort"
        android:icon="@drawable/sort_black_24dp"
        android:title="@string/sort"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/search_black_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>